@@ -3,6 +3,7 @@ https://github.com/resident-uhlig/chrome-hyperiums7/issues
 
 XXXX-XX-XX XX:XX:XX Version X.X.X
 * Added datatables to "per player" / "more details" fleets table
+* Added live timeline at the bottom of all pages (hover ticks to show)
 
 2014-10-21 16:21:00 Version 0.6.1
 * Fixed unknown HAPI data "counterinfiltr"
